# direktiv

./: .gitignore  CHANGELOG.md  README.md  another.md  pyproject.toml  sample.md
direktiv/: __init__.py  app.py  cli.py  config.py  database.py  document_manager.py
direktiv/widgets/: __init__.py  dialogs.py  file_tree.py  filtered_directory_tree.py  viewer.py
docs/: README.md  direktiv.tape  features.md
tests/: __init__.py  test_app.py  test_database.py  test_file_tree.py
